# dedlin

./: .dedlin  .gitignore  .markdownlintrc  .pre-commit-config.yaml  .pydoctest.json  .pylintrc  .pylintrc_scripts  .pylintrc_test  AGENTS.md  CHANGELOG.md  Dockerfile_local  Justfile  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  bar.txt  bash_test.sh  doc_reports.sh  docker_run.sh  docs.mk  foo.txt  grep.ed  macro.mac  main.py  makefile.docs  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  private_dictionary.txt  pyproject.toml  pyproject.toml.org  quick_build.sh  requirements.txt  sed.ed  server.sh  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  build.yml  build_push_image.yml  publish_to_pypi.yml
chat_gpt/: full.py  tiny.py  wfull.py  wfull_shorter.py
dead_code/: server.sh  test_web.py  web_api.py
dedlin/: __about__.py  __init__.py  __main__.py  ai_interface.py  basic_types.py  command_sources.py  document.py  document_sources.py  editable_input_prompt.py  file_converters.py  file_system.py  flash.py  help_text.py  history_feature.py  info_bar.py  logging_utils.py  lorem_data.py  main.py  parsers.md  parsers.py  program.py  pygments_code.py  rich_output.py  spelling_overlay.py  string_comands.py  ui_exit.py  web.py  web_api.py
dedlin/outputters/: plain.py  rich_output.py  talking_outputter.py
dedlin/text/: help_text.py
dedlin/tools/: export.py  info_bar.py  lorem_data.py  spelling_overlay.py  web.py
dedlin/utils/: exceptions.py  file_utils.py
docker/: Dockerfile  Dockerfile_local  docker_run.ps1
docs/: TODO.md  easter_eggs.md  feature_suggestions  feature_suggestions.md  headless.md  index.md  installation.md  macros.md  prior_art.md  quick_start.md  setup.md  user_manual.md
future_features/: sqlite_store.py
hide/: conftest.py  test_macro_runner.py  test_macro_simulator.py
scripts/: a.py  docker_run.sh  generate_random_macros.py  new_prompt.py
test/: test_basic_types.py  test_command_parser.py  test_document.py  test_document_edit_insert.py  test_macro.py
test/sample_files/: animals.txt  many_animals.txt
test/sample_macros/: sed.ed
tests/: fakes.py  test_basic_types.py  test_bugs.py  test_command_parser.py  test_document.py  test_document_display.py  test_document_edit_insert.py  test_document_hypothesis.py  test_fancy_fonts.py  test_file_converters.py  test_headless_scripts.py  test_logging_config.py  test_macro.py  test_macro_runner.py  test_macro_simulator.py  test_macros.py  test_main.py  test_rich_printer.py  test_spelling.py  test_string_support.py  test_web.py
tests/sample_files/: animals.txt
tests/sample_headless_scripts/: degenerate.ed  invalid.ed  lorem.ed  lorem.ed_snapshot.txt  news.ed  randomize.ed  robo.ed  robo.ed_snapshot.txt  walrus_facts.ed  walrus_facts.ed_snapshot.txt  walrus_facts2.ed  walrus_facts2.ed_snapshot.txt
tests/sample_macros/: degenerate.ed  grep.ed  grep_in.txt  grep_log.txt  lorem.ed  news.ed  randomize.ed  robo.ed  sed.ed  sed_in.txt  sed_log.txt  sed_out.txt  walrus_facts1.ed  walrus_facts1_in.txt  walrus_facts1_log.txt  walrus_facts1_out.txt  walrus_facts2.ed  walrus_facts2_log.txt  walrus_facts2_out.txt  walrus_facts3.ed  walrus_facts3_in.txt  walrus_facts3_log.txt  walrus_facts3_out.txt
tests/test_random_commands/: test_random.py
tests/test_with_hypothesis/: test_basic_types.py  test_basic_types_generated.py  test_command_sources.py  test_document_generated.py  test_document_hypothesis.py  test_document_sources.py  test_document_with_hyp.py  test_main_with_dupes.py  test_parser.py
